--- a/grant.html
+++ b/grant.html
@@ -1,14 +1,12 @@
 <html>
   <head>
-    <title>Can Haz Perms?</title>
+    <title>CI Roster Importer</title>
   </head>
   <body>
     {% if has_credentials %}
-    <p>Thanks for granting us permission. Please <a href="/about">proceed to the main
-      application</a>.</p>
+    <p>Thanks for granting us permission. Please <a href="/import">proceed to import your CI roaster</a>.</p>
     {% else %}
-    <p><a href="{{ url }}">Grant</a> this application permission to read your
-    Google+ information and it will let you know how many followers you have.</p>
+    <p><a href="{{ url }}">Grant</a> this application permission to import CI roaster to your Google Calendar</p>
     {% endif %}
     <p>You can always <a
       href="https://www.google.com/accounts/b/0/IssuedAuthSubTokens">revoke</a>
