--- a/grant.html
+++ b/grant.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     {% if has_credentials %}
-    <p>Thanks for granting us permission. Please <a href="/import">proceed to import your CI roaster</a>.</p>
+    <p>Thanks for granting us permission. Please <a href="/import">proceed to import your CI roster</a>.</p>
     {% else %}
     <p><a href="{{ url }}">Grant</a> this application permission to import CI roaster to your Google Calendar</p>
     {% endif %}
